# stockflow

./: .gitignore  INSTALL.md  README.md  install.ps1  install.sh  launch_dashboard.ps1  launch_mac.sh  requirements.txt
backend/: README.md  pyproject.toml  watchlist.json
backend/config/: universe.txt  universe_liquid_us.txt
backend/scanner/: __init__.py  cli.py  daily_scan.py  data_provider.py  watchlist.py
backend/scripts/: debug_unr_pltr.py  run_friday_scan.ps1
backend/server/: __init__.py  app.py  ib_live.py
backend/tests/: test_daily_scan.py  test_watchlist.py
dashboard/: README.md  index.html  package-lock.json  package.json
dashboard/src/: App.tsx  RealTimeDashboard.tsx  main.tsx  theme.ts
docs/: ARCHITECTURE.md  README.md  SETUP_CRITERIA.md  SETUP_UNR.md  STOCK_UNIVERSE.md
unr_setup/: README.md  pyproject.toml
unr_setup/config/setups/: unr.json  unr.yaml
unr_setup/tests/: test_evaluator.py  test_repository.py  test_scoring.py  test_setup_criteria.py  test_strat.py  test_unr_daily.py
unr_setup/unr_setup/: __init__.py  evaluator.py  models.py  repository.py  scoring.py  setup_criteria.py  strat.py  unr_daily.py
