[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scanner*"]

[project]
name = "scanner-backend"
version = "0.1.0"
description = "Daily scan backend: find symbols that meet setup criteria (watchlist)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "unr-setup",
    "yfinance>=0.2.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "ib_insync>=0.9.86",
]

[project.scripts]
run-daily-scan = "scanner.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
